@@ -51,6 +51,7 @@
 
 @end
 
+//--------------------------------------------------------------------------------------------------
 
 OBJC_EXPORT id<HCMatcher> HC_isNot(id matcherOrValue)
 {
