@@ -45,20 +45,20 @@
 
 - (void) describeMismatchOf:(id)item to:(id<HCDescription>)mismatchDescription
 {
-    [[mismatchDescription appendText:@"was "] appendDescriptionOf:item];
-    [mismatchDescription appendText:[NSString stringWithFormat:@": 0x%0x", item]];
+    [[mismatchDescription appendText:[NSString stringWithFormat:@"was 0x%0x ", item]]
+                 appendDescriptionOf:item];
 }
 
 
 - (void) describeTo:(id<HCDescription>)description
 {
-    [[[description appendText:@"sameInstance("]
-                   appendDescriptionOf:object]
-                   appendText:@")"];
+    [[description appendText:[NSString stringWithFormat:@"same instance as 0x%0x ", object]]
+         appendDescriptionOf:object];
 }
 
 @end
 
+//--------------------------------------------------------------------------------------------------
 
 OBJC_EXPORT id<HCMatcher> HC_sameInstance(id object)
 {
