@@ -7,6 +7,8 @@ Hamcrest information: http://code.google.com/p/hamcrest/
 
 * Fixed "describedAs" and "is" to use their nested matchers to generate the mismatch diagnosis.
 
+* Changed "sameInstance" description and mismatch description to be more readable and show the respective memory addresses.
+
 
 == Version 1.2 ==
 
